squash-merge: impl-go into main
